# support-ops-triage-env-submission

./: .dockerignore  Dockerfile  README.md  __init__.py  baseline_runner.py  client.py  grading.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_bank.py
docs/: submission-runbook.md
scripts/: __init__.py  check_space_status.py  ci_determinism_check.py  pre_submission_validate.py  run_baseline.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py  support_ops_triage_env_environment.py
